--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagne.html">Lasagne Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagne.html">Lasagne Recipe</a></li>
+    </ul>
+    
 </body>
 </html>
