Fixed Recipe list link names

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagne.html">Lasagne Recipe</a></li>
+        <li><a href="recipes/lobby.html">Lobby Recipe</a></li>
+        <li><a href="recipes/chilliconcarne.html">Chilli Con Carne Recipe</a></li>
     </ul>
     
 </body>
