--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagne.html">Lasagne Recipe</a></li>
-        <li><a href="recipes/lobby.html">Lobby Recipe</a></li>
-        <li><a href="recipes/chilliconcarne.html">Chilli Con Carne Recipe</a></li>
-    </ul>
-    
+    <div class="header"><h1>Odin Recipes</h1></div>
+    <div class="body">
+        <ul>
+            <li><a href="recipes/lasagne.html">Lasagne Recipe</a></li>
+            <li><a href="recipes/lobby.html">Lobby Recipe</a></li>
+            <li><a href="recipes/chilliconcarne.html">Chilli Con Carne Recipe</a></li>
+        </ul>
+    </div>
 </body>
 </html>
